# Ultra-Engine

./: .gitignore  Cargo.toml  README.md  release  test
.github/: copilot-instructions.md
.github/workflows/: rust.yml
engine/: Cargo.toml
engine/benches/: my_benchmark.rs
engine/src/: action.rs  action_manager.rs  basic_physics_system.rs  camera.rs  camera_component.rs  camera_input.rs  camera_resource.rs  collider_component.rs  collision_system.rs  components.rs  dynamic_aabb_tree.rs  epa.rs  gjk.rs  gravity_resource.rs  handles.rs  input.rs  lib.rs  material.rs  mesh.rs  mesh_resource.rs  model_loader.rs  movement_system.rs  physics.rs  physics_component.rs  physics_resource.rs  physics_system.rs  render.rs  render_body.rs  render_body_component.rs  render_body_resource.rs  render_instance.rs  render_queue.rs  render_resource_manager.rs  render_system.rs  renderer.rs  renderer_backends.rs  shader.rs  sleep_component.rs  texture.rs  texture_resource_manager.rs  (+4 more)
engine/tests/: dynamic_aabb_tree_heap_test.rs  epa_heap_test.rs
game/: Cargo.toml
game/src/: bowl_controller.rs  camera_controller.rs  game_controller.rs  input_controller.rs  main.rs  (+2 more)
src/: basic_physics_system.rs  body.rs  body_builder_system.rs  camera.rs  camera_component.rs  camera_resource_manager.rs  handles.rs  main.rs  material.rs  material_resource.rs  mesh.rs  mesh_component.rs  mesh_renderer.rs  mesh_resource.rs  mesh_resource_manager.rs  render_data_manager.rs  render_instance.rs  render_system.rs  renderer.rs  settings.rs  shader.rs  texture_resource_manager.rs  velocity_component.rs
(+62 files in other folders)
