[workspace]
members = [
    "engine",
    "game",
]
resolver = "2"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "..."

[profile.release]
opt-level = 3
debug = false
split-debuginfo = "..."
lto = true

[profile.release0]
inherits = "release"
opt-level = 0

[profile.release1]
inherits = "release"
opt-level = 1

[profile.release2]
inherits = "release"
opt-level = 2

[profile.release3]
inherits = "release"
opt-level = 3
